# unsupervised-learning-in-biology

./: .gitignore  README.md  pyproject.toml
archive/: Experiment_2 using Uniprot.ipynb
experiments/: EDA.ipynb  Experiment_1 weight projection.ipynb  Experiment_1.ipynb  Experiment_2.html  Experiment_2.ipynb  Experiment_3.html  Experiment_3.ipynb  Experiment_4.html  Experiment_4.ipynb  Experiment_5.ipynb  Experiment_6.ipynb
helpers/: helper.py
